--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
    <!-- JSF URL mapping -->
    <servlet-mapping>
        <servlet-name>Faces Servlet</servlet-name>
-       <url-pattern>*.aw</url-pattern>
+       <url-pattern>*.jsf</url-pattern>
    </servlet-mapping>
    
    <servlet-mapping>
