--- a/pom.xml
+++ b/pom.xml
@@ -63,13 +63,13 @@
 			<version>3.5.6-Final</version>
 		</dependency>
 
-		<!-- SQLite -->
+		<!-- utils -->
 		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.7.2</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
 		</dependency>
-
+		
 		<!-- JUnit -->
 		<dependency>
 			<groupId>junit</groupId>
